# kaniko-wrapper

./: CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  scripts.py
docker/: Dockerfile  docker-compose.yml
docs/en/: commands.md  kaniko.md
docs/ru/: commands.md  kaniko.md
kaniko/: __main__.py  main.py  settings.py
kaniko/commands/: __init__.py
kaniko/docs/: commands.md
kaniko/helpers/: castom_exeption.py  logger_file.py  version.py
kaniko/tests/: test_run.py
src/kaniko-wrapper/: kaniko-wrapper.py
src/kaniko_wrapper/: kaniko_wrapper.py  setting.py
src/kaniko_wrapper/helper/: _dataclass.py  class_kaniko.py  helper.py  log_print.py
src/test/: test_dataclass.py  test_kaniko.py
