[tool.poetry]
name = "kaniko"
version = "1.1.0.0"
description = ""
authors = ["Olga Komarova <okomarova@saber.games>"]
readme = "README.md"

[tool.poetry.scripts]
kaniko = "kaniko.__main__:__main__"

[tool.poetry.dependencies]
python = "^3.8"
build = "~1.2.1"
twine = "*"
PyYAML = "~6.0.1"
python-dotenv = "~1.0.1"
docopt = "~0.6.2"
pip = "~24.2"
pillow = "~10.3.0"
filelock = "~3.15.4"
typing_extensions = "~4.11.0"
rich = "~13.9.2"
Pygments = "~2.18.0"
black = "~24.4.1"
platformdirs = "~4.2.1"
colorama = "~0.4.6"
packaging = "~24.0"
pathspec = "~0.12.1"
click = "~8.1.7"
pyproject_hooks = "~1.1.0"
mdurl = "~0.1.2"
keyring = "~24.3.1"
requests = "~2.31.0"
pkginfo = "~1.11.1"
urllib3 = "~2.2.1"
certifi = "~2024.2.2"
pytest = "~8.3.3"
pluggy = "~1.5.0"
idna = "~3.7"
docutils = "^0.21"